# first-flask-api-server

./: README.md  app.py  init_db.py  pyproject.toml  test.db
